<resources>
	<string name="app_name">Quick Dice Roller</string>
	<string name="app_author">Ohmnibus</string>
	<string name="lblName">Name</string>
	<string name="hintName">Enter die name here</string>
	<string name="lblDesc">Description</string>
	<string name="hintDesc">Enter die description here</string>
	<string name="lblIcon">Icon</string>
	<string name="lblExp">Formula</string>
	<string name="hintExp">Enter die formula here</string>
	<string name="lblRangeValue">Values</string>
	<string name="lblCannotEvaluate">Cannot evaluate</string>
	<string name="lblResultText">Extended result</string>
	<string name="lblResultValue">Numeric Result</string>
	<string name="lblDiceBuilder">Dice Builder</string>
	<string name="lblDiceBuilderMsg">Compose a single type dice roll to add to the main formula.</string>
	<string name="lblCheckExpression">Check die formula.</string>
	<string name="lblCheckPassed">Die formula is CORRECT.</string>
	<string name="lblIconPicker">Icon Picker</string>
	<string name="lblDiceIconPicker">Dice icon Picker</string>
	<string name="lblBagIconPicker">Bag icon Picker</string>
	<string name="lblVariableIconPicker">Named value icon Picker</string>
	<string name="lblModifierBuilder">Mod Builder</string>
	<string name="lblModifierBuilderMessage">Compose a modifier.</string>
	<string name="lblNeutralModifier">Does it make any sense to create a neutral modifier?</string>
	<string name="lblDuplicateModifier">This modifier already exists.</string>
	<string name="lblNameBag">Name</string>
	<string name="hintNameBag">Enter bag name here</string>
	<string name="lblDescBag">Description</string>
	<string name="hintDescBag">Enter bag description here</string>
	<string name="lblIconBag">Icon</string>
	<string name="lblMailSubject">[QDR] Suggestion</string>
	<string name="lblSendMail">Submit suggestion</string>
	<string name="lblCurrentFolder">Current folder: %1$s</string>
	<string name="lblItemHiddenFolder">Hidden folder</string>
	<string name="lblItemFolder">Folder</string>
	<string name="lblItemFile">%1$s - %2$s %3$s</string>
	<string name="lblParentFolder">Parent folder</string>
	<string name="lblSelectFile">Select file</string>
	<string name="lblSelectFolder">Select folder</string>
	<string name="lblNewFile">New file</string>
	<string name="lblImportFromRecent">Import from recent file</string>
	<string name="lblImportFrom">Import from&#8230;</string>
	<string name="lblExportTo">Export to&#8230;</string>
	<string name="lblItemMRU">%2$d dice in %1$s bags - %4$s %5$s</string>
	<string name="lblD">d</string>
	<string name="lblSelectDice">Select dice</string>
	<string name="lblSelectDiceDest">Select dice destination</string>
	<string name="lblLastPositionName">&lt;At the end&gt;</string>
	<string name="lblLastPositionDesc">&lt;Select this to move at the end&gt;</string>
	<string name="lblDragToResize">Drag to resize</string>
	<string name="lblQuality">Result quality</string>
	<string name="lblResultQualityRange">Result, quality, range</string>
	<string name="lblRangeFmt">%1$d &#8594; %2$d (%3$d)</string>
	<string name="lblNameVar">Name</string>
	<string name="hintNameVar">Value\'s name</string>
	<string name="lblDescVar">Description</string>
	<string name="hintDescVar">Value\'s description</string>
	<string name="lblLabelVar">Label</string>
	<string name="hintLabelVar">Label to use in expressions</string>
	<string name="lblMinimum">Minimum</string>
	<string name="lblCurrent">Current</string>
	<string name="lblMaximum">Maximum</string>
	<string name="lblMin">Min</string>
	<string name="lblMax">Max</string>
	<string name="lblLabelValueVar">Label: Value (Min &#8594; Max)</string>
	<string name="lblLabelValueVarFmt">%1$s: %2$s (%3$s &#8594; %4$s)</string>
	<string name="lblDiceBags">Dice bags</string>
	<string name="lblVariables">Named values</string>
	<string name="lblNumberPicker">Number picker</string>
	<string name="lblSelectValue">Select a value.</string>
	<string name="lblSelectMinValue">Select the lower bound for this named value.</string>
	<string name="lblSelectMaxValue">Select the upper bound for this named value.</string>
	<string name="lblSelectVariable">Select a Named Value</string>
	<string name="lblSelectFunction">Select a Function</string>
	<string name="lblSelectVariableNone">This bag doesn\'t contain any named value.</string>
	<string name="lblGb">Gb</string>
	<string name="lblMb">Mb</string>
	<string name="lblKb">Kb</string>
	<string name="lblB">b</string>
	<string name="lblConfirm">Confirm</string>
	<string name="lblCancel">Cancel</string>
	<string name="lblYes">Yes</string>
	<string name="lblNo">No</string>
	<string name="lblOk">OK</string>
	<string name="lblDone">Done</string>
	<string name="lblUndo">UNDO</string>
	<string name="msgRemoveDiceTitle">Remove die</string>
	<string name="msgRemoveDice">Are you sure to definitively remove the die \"%1$s\"?</string>
	<string name="msgClearResultsTitle">Clear results</string>
	<string name="msgClearResults">Are you sure to clear all the roll results?</string>
	<string name="msgLostChange">Leaving now you will lose pending changes. Continue?</string>
	<string name="msgMissingVar">The dice requires some named values that are no longer available: \"%1$s\"\nThe dice cannot be rolled until the named values are added to the dice bag. Save anyway?</string>
	<string name="msgRemoveDiceBagTitle">Remove dice bag</string>
	<string name="msgRemoveDiceBag">Are you sure to definitively remove the dice bag \"%1$s\"? It contains \"%2$d\" dice and \"%3$d\" modifiers. All those items will be lost in time, like tears in rain.</string>
	<string name="msgRemoveDiceBagNew">Are you sure to definitively remove the dice bag \"%1$s\"? It contains \"%2$d\" dice, \"%3$d\" named values and \"%4$d\" modifiers. All those items will be lost in time, like tears in rain.</string>
	<string name="msgWhatsNew">What\'s new</string>
	<string name="msgWhatsNewTitle">What\'s new in version %2$s</string>
	<string name="msgWhatsNewBody"><![CDATA[
<br />
<b>Please</b> send me a <a href="mailto:ohmnibus@gmail.com">mail</a> if you have any suggestion on how to improve the app and/or the translations.<br />
<br />
Want to stay up to date? <a href="http://goo.gl/UuJBSO">Become a beta tester!</a><br />
<br />
&bull; Keep screen on<br />
&bull; New keyboard for dice expressions<br />
&bull; Increased value range<br />
&bull; Named value picker in expression editor<br />
&bull; Fix: error in landscape mode<br />
&bull; Fix: named value not saved upon value change<br />
&bull; Fix: named value in function builder didn\'t work<br />
&bull; Fix: layout issues<br />
<br />
Version 1.4.4.3<br />
&bull; Titles with "add" option on drawers<br />
&bull; Support to Shadowrun 4ed and 5ed<br />
&bull; Better output for many functions<br />
&bull; Minor fix and improvements<br />
<br />
Version 1.4.4.2<br />
&bull; Variable named values usable in expressions<br />
&bull; Select from 4 different themes<br />
&bull; Improved layout<br />
&bull; Minor fix and improvements<br />
<br />]]></string>
	<string name="msgAboutTitle">About %1$s</string>
	<string name="msgAboutBody"><![CDATA[%1$s version %2$s<br />
Copyright (c) 2012-2014 by %3$s<br />
<br />
Translations: Stefania M. (ES), Magaolimpia (FR), Henning (DE)<br />
<br />
Please report bug to <a href="mailto:ohmnibus@gmail.com">ohmnibus@gmail.com</a><br />
<br />
This is a free app, however if you like it please consider to make a donation.<br />
<br />
Thanks!<br />]]></string>
	<string name="msgLicenses">Licenses</string>
	<string name="lblLicense"><![CDATA[&bull; <a href="%1$s">%2$s</a> is published by %3$s under <a href="%4$s">%5$s</a>.<br />]]></string>
	<string-array name="lblLicenseLibURLs">
		<item>http://code.google.com/p/android-wheel/</item>
		<item>https://github.com/lorensiuswlt/</item>
		<item>https://github.com/romannurik/Android-SwipeToDismiss/</item>
		<item>http://nineoldandroids.com/</item>
		<item>https://code.google.com/p/google-gson/</item>
	</string-array>
	<string-array name="lblLicenseLibNames">
		<item>Android wheel widget</item>
		<item>QuickAction widget</item>
		<item>Swipe to Dismiss code</item>
		<item>Nine Old Androids</item>
		<item>Google Gson</item>
	</string-array>
	<string-array name="lblLicenseLibAuthors">
		<item>Yuri Kanivets</item>
		<item>Lorensius W. L. T.</item>
		<item>Roman Nurik</item>
		<item>Jake Wharton</item>
		<item>Google</item>
	</string-array>
	<string-array name="lblLicenseNames">
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
		<item>Apache 2.0 License</item>
	</string-array>
	<string-array name="lblLicenseURLs">
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
		<item>http://www.apache.org/licenses/LICENSE-2.0</item>
	</string-array>
	<string name="lbl_donate_title_small">Small donation</string>
	<string name="lbl_donate_url_small">https://play.google.com/store/apps/details?id=ohm.donate.small</string>
	<string name="lbl_donate_title_medium">Medium donation</string>
	<string name="lbl_donate_url_medium">https://play.google.com/store/apps/details?id=ohm.donate.medium</string>
	<string name="lbl_donate_title_large">Generous donation</string>
	<string name="lbl_donate_url_large">https://play.google.com/store/apps/details?id=ohm.donate.large</string>
	<string name="msgRemoveModTitle">Remove modifier</string>
	<string name="msgRemoveMod">Are you sure to definitively remove the modifier \"%1$s\"?</string>
	<string name="msgBonusTitle">Bonus %1$+d</string>
	<string name="msgBonusMessage">Positive modifier of %1$+d</string>
	<string name="msgMalusTitle">Penalty %1$+d</string>
	<string name="msgMalusMessage">Negative modifier of %1$+d</string>
	<string name="msgMaxBagsReach">You can\'t add more dice bags.</string>
	<string name="msgMaxDiceReach">You can\'t add more dice.</string>
	<string name="msgMaxModifiersReach">You can\'t add more modifiers.</string>
	<string name="msgMaxVariablesReach">You can\'t add more named values.</string>
	<string name="msgOnlineHelpTitle">Quick reference</string>
	<string name="msgOnlineHelp">Check Online Help</string>
	<string name="msgOnlineHelpURL">http://www.ohmnibus.net/en/page.asp?Area=Android&amp;Item=QuickDice&amp;Page=Page02</string>
	<string name="msgCannotRead">Cannot read folder content (or part of it)</string>
	<string name="msgFileNameInvalid">File name \"%1$s\" is not valid.</string>
	<string name="msgFileNameExists">File name \"%1$s\" already exists. Are you sure you want to overwrite this file?</string>
	<string name="msgExported">Dice definitions exported</string>
	<string name="msgImported">Dice definitions imported</string>
	<string name="msgConfirmImport">This operation will overwrite all dice definitions. Are you sure you want to proceed?</string>
	<string name="msgRemoveVar">Are you sure to definitively remove the value named \"%1$s\"?</string>
	<string name="msgRemoveUsedVar">The value named \"%1$s\" is currently used by \"%2$s\".\nIf you remove it this dice won\'t work anymore. Continue anyway?</string>
	<string name="mnuAddDice">Add die</string>
	<string name="mnuClearAllResults">Clear all results</string>
	<string name="mnuUndoClearAllResult">Restore all results</string>
	<string name="mnuSettings">Settings</string>
	<string name="mnuAbout">About</string>
	<string name="mnuUndoClearResult">Restore result</string>
	<string name="mnuAddMod">Add modifier</string>
	<string name="mnuExit">Exit</string>
	<string name="mnuOpenDiceBagDrawer">Open bag drawer</string>
	<string name="mnuImportExport">Import / Export</string>
	<string name="mnuOpenVariableDrawer">Open named value drawer</string>
</resources>